# CosmicMissions

./: .deployment  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_rg-cosmic-missions.yml  test.yml
data/: cosmic_missions.csv
docs/: api-testing-checklist.md  upgrade-roadmap.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf
sql_files/: create_cosmic_missions_table.sql  create_crew_members_table.sql
src/: auth.py  database.py  main.py  models.py  routers.py  schemas.py
tests/: assertions.py  conftest.py  test_cosmic_missions_delete.py  test_cosmic_missions_get.py  test_cosmic_missions_patch.py  test_cosmic_missions_post.py  test_cosmic_missions_put.py  test_cosmic_missions_roundtrip.py  test_database.py
tests/payloads/: missions.py
